frontend/src/App.css
/* ... */
.ToolbarLinkInfoSpan {
    display: none;
    position: absolute;
    top: 15%;
    left: 5%;
    width: 90%;
    background-color: grey;
    z-index: 100;
}


.EntreatyCreationToolbarDropdownOption {
    position: relative;
    height: 8vh;
    width: 100%;
    float: left;
    background-color: rgb(100, 100, 100);
    border-radius: 1vh;
    box-shadow: var(--fullBoxShadow);
}


.ToolbarDropdownOptionContainer {
    position: absolute;
    top: 100%;
    z-index: 10;
    width: 15vw;
    display: none;
}


.ToolbarUrlInputCollection {
    display: none;
    position: absolute;
    z-index: 10;
    width: 100%;
    height: 100%;

}

.ToolbarUrlInputField {
    position: absolute;
    bottom: 0%;
    width: 60%;
    height: calc(100% - 1vh);
    left: 20%;
    font-size: 3vh;
 }

 
 .ToolbarUrlCloseOption {
    position: absolute;
    width: 20%;
    height: 100%;
    bottom: 0%;
    left: 0%;
    border-radius: 1vh 0vh 0vh 1vh;
    background: var(--optionGradient);
    box-shadow: var(--fullBoxShadow);
 }

 .ToolbarSubmitUrlButton {
    position: absolute;
    width: calc(20% - 1vh);
    height: 100%;
    bottom: 0%;
    right: 0%;
    border-radius: 0vh 1vh 1vh 0vh;
    background: var(--optionGradient);
    box-shadow: var(--fullBoxShadow);
 }


#EntreatySearchOptions {
    display: flex;
    flex-direction: column;
    gap: 5%;
    position: absolute;
    left: 0vw;
    height: 100%;
    width: 13vw;
    background-color: var(--secondaryCol);
    text-align: center;
    box-shadow: inset -.1vw 0 black;

}

.EntreatySearchOption {
    position: relative;
    height: 50%;
    width: 15%;
    background-image: var(--optionGradient);
    border-radius: 1vh;
    box-shadow: var(--fullBoxShadow);
    cursor: grab;
}

.EntreatyDropdownSearchOption {
    position: relative;
    height: 50%;
    width: 15%;
    background-image: var(--optionGradient);
    border-radius: 1vh;
    box-shadow: var(--fullBoxShadow);
    cursor: grab;
}

#EntreatyDropdownSearchOptions {
    display: none;
    flex-direction: column;
    gap: 5%;
    position: absolute;
    z-index: 10;
    left: -50%;
    width: 50%;
    height: 100%;
    background-color: var(--secondaryCol);
    box-shadow: inset -.1vw 0 black;
    transition: .5s;

}

#EntreatyDropdownSearchOptions[data-revealed="true"] {
    display: flex;
}
#EntreatyDropdownSearchOptions[data-shifted="true"] {
    left: 0%;
}

.EntreatyDropdownSearchOption:hover #DropdownContainer {
    display: flex;

}

#EntreatySearchFilter {
    padding-inline-end: 5vw 0vw;
    justify-content: center;
    position: absolute;
    height: 10vh;
    background-color: var(--primaryCol);
    box-shadow: inset 0 -.1vh black;

}



#EntreatySearchFilterSpan {

}

#EntreatiesSubcategoriesDropdown {
    position: relative;
}

.EntreatySearchBox {
    position: relative;
    display: inline-block;
    margin: 1.25%;
    margin-bottom: 1.25%;
    margin-top: none;
    width: 45%;
    height: 45%;
    background-color: grey;
    border-style: solid;
    border-width: 2vh;
    border-image: linear-gradient(to bottom, hsl(calc(var(--chosenHue) - 180), 34%, 37%), 
        hsl(calc(var(--chosenHue) - 180), 33%, 18%) 90%) 1;
    outline-style: solid;
    outline-width: .5vh;
    outline-color: hsl(calc(var(--chosenHue) - 180), 27%, 46%);
    overflow: hidden;
    box-sizing: border-box;

}

.EntreatySearchBox[data-enlarged="true"] {
    position: relative;
    top: 0%;
    margin: none;
    width: calc(100% - 7.5vh);
    height: 100%;
}


.EntreatySearchBoxImageSection {
    width: 20%;
    height: 20%;
    background-color:rgb(0, 0, 0);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    transition: .35s;
}

.EntreatySearchBoxImageSection:hover {
    width: 100%;
    height: 100%;
}

.EntreatySearchBoxImageSection:hover ~.EntreatySearchBoxTitleSection {
    width: 0%;
    height: 0%;
    left: 100%;
}

.EntreatySearchBoxTitleSection {
    position: absolute;
    cursor: url("/public/arrow_cursor.png") 32 24, auto;;
    top: 0%;
    left: 20%;
    width: 80%;
    height: 20%;
    background-color: var(--emphasizedPrimaryCol);
    transition: 0.35s;
    overflow-y: scroll;
    scrollbar-width: none;
    color: var(--secondaryTextCol);
    text-decoration: solid underline var(--emphasizedComplimentaryCol);

}

.EntreatySearchBoxTitleSection::-webkit-scrollbar {
    display: none;
}

.EntreatySearchBoxName {
    text-decoration: solid underline var(--emphasizedComplimentaryCol);
    cursor: pointer;
}

.EntreatySearchBoxName:hover {
    text-decoration: solid underline var(--emphasizedPrimaryCol);
    color: var(--emphasizedComplimentaryCol)

}

.EntreatySearchBoxMetaInfo {
    position: relative;
    width: 100%;
    height: 20%;
    font-size: clamp(18px, 3vmin, 4vh);
    background: var(--tertiaryCol);
    overflow-y: scroll;
    scrollbar-width: none;
    color: var(--secondaryTextCol);
}

.EntreatySearchBoxMetaInfo::-webkit-scrollbar {
    display: none;
}

.EntreatySearchBoxDescriptionSection {
    position: relative;
    width: 100%;
    height: 60%;
    background-color: hsl(0, 0%, 75%);
    transition: .35s;
    overflow-y: scroll;
    scrollbar-width: none;
}

.EntreatySearchBoxDescriptionSection::-webkit-scrollbar {
    display: none;
}

.EntreatySearchBoxDescriptionSection:hover {
    height: 80%;
    cursor: grab;
}

.EntreatySearchBoxSpan {
    font-size: clamp(18px, 3vmin, 4vh);
}

.EntreatySearchBoxDescriptionSection:hover ~.EntreatySearchBoxTitleSection .EntreatySearchBoxMetaInfo {
    display: none;
    height: 0%;
}



#SpecificEntreatyPageRoot {
    position: absolute;
    top: 7.5vh;
    height: 92.5vh;
    width: 100%;
    background-color: rgb(45, 45, 45);
    transition: .75s;
    overflow-y: scroll;
    scrollbar-width: none;
}

#SpecificEntreatyPageRoot::-webkit-scrollbar {
    display: none;
}
/* ... */

